# xStats

./: .gitignore  Cargo.toml  README.md  run_cli.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/core/: mod.rs
src/graph/: mod.rs
src/metrics/: code_metrics.rs  mod.rs
src/parser/: mod.rs
src/ts/: mod.rs
src/utils/: git_manager.rs  mod.rs  progress_bar.rs  version_control.rs
src/visitor/: mod.rs
tests/: expected.rs  main.rs
tests/samples/example1/: example.java  example.py
