[package]
name = "xstats"
version = "0.1.0"
authors = ["Gautam Shetty <gautamshetty@pm.me>"]
edition = '2021'

[[bin]]
name = "xStats"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.23"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.21", features = ["derive"] }
indicatif = "0.17.9"
git2 = "0.19.0"

[build-dependencies]
cc = "*"
